objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. In ServiceMax, service orders can be used to manage the entire service delivery process, from creating estimates and quotations, to requesting and receiving parts, to recording usage/consumption, to closure and analysis.</description>
    <fields>
        <fullName>AssignedTT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Tools/Technicians</label>
        <referenceTo>AssignedToolsTechnicians__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Update_FSR_Time__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When  the FSR create Time entry or  update a existing line and the check box &quot; Auto Update FSR Time&quot; is active, If the FSR Update the Customer start and end fields. The value should update the FSR start and end with the same value.</description>
        <label>Auto Update FSR Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BO_Material_Reference__c</fullName>
        <formula>PartsOrderLine__r.BOMaterialReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BO Material Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOfficeSystem__c</fullName>
        <formula>TEXT(SVMXC__Service_Order__r.BackOfficeSystem__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BackOfficeSystem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankTimeInHours__c</fullName>
        <description>BFOFS-3231 Oct 2019 FSRTools</description>
        <label>Bank Time(In Hours)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOFS-3231</description>
        <label>Bank time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountryOfBackOffice__c</fullName>
        <formula>TEXT(SVMXC__Service_Order__r.CountryOfBackOffice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountryOfBackOffice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCountryUser__c</fullName>
        <formula>TEXT($User.BigMachines__Currency_Preference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Country of User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyUser__c</fullName>
        <formula>TEXT($User.BigMachines__Currency_Preference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Links__c</fullName>
        <description>Need to display SVMXC__Serial_Number__r.TECH_SDHCategoryId__c for the range but reached the limit</description>
        <formula>HYPERLINK($Label.CLR217FS07+&apos;productrangeid=&apos;+ Product_s_Range__c	
 +&apos;&amp;WOid=&apos;+SVMXC__Service_Order__c+&apos;&amp;WOnb=&apos; +SVMXC__Service_Order__r.Name+&apos;&amp;parWOId=&apos;+ SVMXC__Service_Order__r.Parent_Work_Order__c,&apos;LAUNCH TIPI&apos;)</formula>
        <label>Custom Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerEndDateandTime__c</fullName>
        <label>Customer End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerEndDatetimeAtWOTimeZone__c</fullName>
        <description>This is the text representation of the end date/time of the work detail &quot;frozen&quot; at the WO time zone. This allows to have a &quot;static&quot; representation of end date/time regardless of the user time zone settings.</description>
        <inlineHelpText>This is the text representation of the end date/time of the work detail &quot;frozen&quot; at the WO time zone. This allows to have a &quot;static&quot; representation of end date/time regardless of the user time zone settings.</inlineHelpText>
        <label>Customer End Date/time at WO time zone</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerHourType__c</fullName>
        <label>Customer Hour Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NHO</fullName>
                </value>
                <value>
                    <fullName>ONH</fullName>
                </value>
                <value>
                    <fullName>NTI</fullName>
                </value>
                <value>
                    <fullName>STA</fullName>
                </value>
                <value>
                    <fullName>SNA</fullName>
                </value>
                <value>
                    <fullName>WNI</fullName>
                </value>
                <value>
                    <fullName>BHO</fullName>
                </value>
                <value>
                    <fullName>MHO</fullName>
                </value>
                <value>
                    <fullName>WEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerStartDateandTime__c</fullName>
        <label>Customer Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerStartDatetimeAtWOTimeZone__c</fullName>
        <description>This is the text representation of the start date/time of the work detail &quot;frozen&quot; at the WO time zone. This allows to have a &quot;static&quot; representation of start date/time regardless of the user time zone settings.</description>
        <inlineHelpText>This is the text representation of the start date/time of the work detail &quot;frozen&quot; at the WO time zone. This allows to have a &quot;static&quot; representation of start date/time regardless of the user time zone settings.</inlineHelpText>
        <label>Customer Start Date/time at WO time zone</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerTotalTime__c</fullName>
        <formula>IF(TotalDuration__c&gt;0 , TotalDuration__c , (CustomerEndDateandTime__c - CustomerStartDateandTime__c)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <formula>SVMXC__Service_Order__r.Customer_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Total_Time_Offline__c</fullName>
        <description>While on mobility, will be used in a formula to indicate Customer Total Time (offline)</description>
        <label>Customer Total Time (Offline)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOAClaim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOFS-2928, If atleast one WD under a WO is checked DOA Claim the Special Instructions field in WO should be concatenated with DOA Claim.</description>
        <label>DOA Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Reason__c</fullName>
        <label>DOA Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA__c</fullName>
        <formula>TEXT( Return_Reason__c ) = $Label.CLR217FS12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeviationHrs__c</fullName>
        <label>Deviation Hrs</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deviation_Category__c</fullName>
        <description>BFOFS-2901 March &apos;19</description>
        <label>Deviation Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Site Access</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deviation_Sub_Category__c</fullName>
        <description>BFOFS-2901 March&apos;19</description>
        <label>Deviation Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Deviation_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scope Of Work Not Clear</fullName>
                </value>
                <value>
                    <fullName>Interference on Site</fullName>
                </value>
                <value>
                    <fullName>Complaints or Additional Explanation</fullName>
                </value>
                <value>
                    <fullName>Waiting Time for Customer Availability</fullName>
                </value>
                <value>
                    <fullName>Safety Hazard found onsite</fullName>
                </value>
                <value>
                    <fullName>Onsite risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Booked Time/Resource not sufficient</fullName>
                </value>
                <value>
                    <fullName>Waiting for spare parts or Materials</fullName>
                </value>
                <value>
                    <fullName>Admin or Reporting issues</fullName>
                </value>
                <value>
                    <fullName>Wrong Site Address/ Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Travel problems</fullName>
                </value>
                <value>
                    <fullName>Cancelled Job</fullName>
                </value>
                <value>
                    <fullName>Site entry or Access</fullName>
                </value>
                <value>
                    <fullName>Product Quality Problems</fullName>
                </value>
                <value>
                    <fullName>Wrong Spare parts or Materials</fullName>
                </value>
                <value>
                    <fullName>FSR Tools damaged or Not functioning</fullName>
                </value>
                <value>
                    <fullName>Needs Technical Escalation</fullName>
                </value>
                <value>
                    <fullName>Pre-Onsite Preparation insufficient</fullName>
                </value>
                <value>
                    <fullName>Sub Contractors management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayinMobile__c</fullName>
        <formula>AND 
(RecordType.DeveloperName = &apos;Parts&apos;,
Parts_Order_Line_Status__c != &apos;Cancelled&apos;,
Parts_Order_Line_Status__c != &apos;Deleted&apos;,
OR(NOT(ISBLANK(PartsOrderLine__c)), NOT(ISBLANK( Parts_Order_Line_RMA__c))))</formula>
        <label>Display in Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Process_TE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Process TE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedQtytobeReturned__c</fullName>
        <formula>IF(NOT(ISBLANK(Parts_Order_Line_RMA__c)), Parts_Order_Line_RMA__r.SVMXC__Expected_Quantity2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Qty to be Returned</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Qty__c</fullName>
        <description>Relabelled &quot;Expected Qty&quot; to &quot;Expected Shipped Qty&quot; by Nitin Khunal</description>
        <formula>IF(NOT(ISBLANK(PartsOrderLine__c)), PartsOrderLine__r.SVMXC__Expected_Quantity2__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Shipped Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Qty_to_be_Returned__c</fullName>
        <label>Expected Qty to be Returned</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Shipped_Return_Qty__c</fullName>
        <description>BR-11501: FSR&apos;s to be able to see the serials of the main installed products that are listed under work details.</description>
        <formula>IF(Expected_Qty__c &gt; 0, Expected_Qty__c, IF(ExpectedQtytobeReturned__c &gt; 0, ExpectedQtytobeReturned__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Shipped/Return Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenseQuantity__c</fullName>
        <label>Expense Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSEWOId__c</fullName>
        <formula>SVMXC__Service_Order__r.FSEWOId__c</formula>
        <label>Local Tracking Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSElastupdatedtimestamp__c</fullName>
        <label>FSE Last Updated Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSR_Business_Unit__c</fullName>
        <formula>TEXT(SVMXC__Group_Member__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSR Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Email__c</fullName>
        <formula>SVMXC__Group_Member__r.SVMXC__Email__c</formula>
        <label>FSR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_HFM_Code__c</fullName>
        <formula>SVMXC__Group_Member__r.HFM_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSR HFM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Name__c</fullName>
        <formula>SVMXC__Group_Member__r.Name</formula>
        <label>FSR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Role__c</fullName>
        <formula>TEXT(SVMXC__Group_Member__r.SVMXC__Role__c)</formula>
        <label>FSR Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_SESA__c</fullName>
        <formula>SVMXC__Group_Member__r.SESAID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSR SESA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailedQuantity__c</fullName>
        <label>Failed Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Text_Reference__c</fullName>
        <formula>IF(Parts_Order_Line_RMA__c != null,Parts_Order_Line_RMA__r.Free_text_reference__c,PartsOrderLine__r.Free_text_reference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Text Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Reference__c</fullName>
        <formula>IF(Parts_Order_Line_RMA__c != null,Parts_Order_Line_RMA__r.Generic_reference__c,PartsOrderLine__r.Generic_reference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldenAssetId__c</fullName>
        <formula>SVMXC__Serial_Number__r.GoldenAssetId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Golden Asset Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourType__c</fullName>
        <description>Hour Type in Labor Record Type</description>
        <label>FSR Hour Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.25</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPOpenHazard__c</fullName>
        <description>Checkbox will be checked to true if any of the serviced IPs are having open hazard. BFOFS-2888, March&apos;19</description>
        <formula>IF(SVMXC__Serial_Number__r.OpenIPHazard__c &gt;= 1, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Open Hazard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Info__c</fullName>
        <description>Displays info from fields on the related installed products in product serviced work details:  Brand-Device Type-Range-Serial Number-Commissioning Date (of IP)-Location (of IP)</description>
        <formula>SVMXC__Serial_Number__r.Brand2__c  + &quot;-&quot; +  SVMXC__Serial_Number__r.DeviceType2__c &amp; &quot;-&quot; &amp;  SVMXC__Serial_Number__r.Range__c &amp; &quot;-&quot; &amp; SVMXC__Serial_Number__r.SVMXC__Serial_Lot_Number__c &amp; &quot;-&quot; &amp;  Text(SVMXC__Serial_Number__r.CommissioningDateInstallDate__c) &amp; &quot;-&quot; &amp;  SVMXC__Serial_Number__r.SVMXC__Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays info from fields on the related installed products in product serviced work details:  Brand-Device Type-Range-Serial Number-Commissioning Date (of IP)-Location (of IP)</inlineHelpText>
        <label>IP Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludedService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Included Service</label>
        <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncludeinSIR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>FSR to include or exclude time and expenses in the SIR pdf document.</description>
        <label>Include in SIR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstalledQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Installed Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsBillable__c</fullName>
        <label>Is Billable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsLoggedInFSR__c</fullName>
        <formula>SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.Id = $User.Id</formula>
        <label>Is Logged In FSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSplitFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to True for the splitted WD&apos;s</description>
        <label>IsSplitFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_For_Admin_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is For Admin Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Synchronization_Date__c</fullName>
        <label>Last Synchronization Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Left_Onsite_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Left Onsite Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_Required__c</fullName>
        <label>Level Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Field Service Representative</fullName>
                </value>
                <value>
                    <fullName>Field Service Technician</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinePricePerUnit__c</fullName>
        <label>Line Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocalTrackingEvent__c</fullName>
        <label>Local Tracking Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalTrackingStatus__c</fullName>
        <label>Local Tracking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>To be processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalTrackingStatusforConsumption__c</fullName>
        <label>Local Tracking Status for Consumption</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>To be processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalWD__c</fullName>
        <label>LocalWD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Tracking_Sync_Log__c</fullName>
        <label>Local Tracking Sync Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIP_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIP Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miles_Driven__c</fullName>
        <label>Miles Driven</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewIPHazardDescription__c</fullName>
        <description>This field will get populated from Update Work order SFM. BFOFS-2888 , MAR&apos;19</description>
        <inlineHelpText>This field will get populated from Update Work order SFM in order to create IP hazard for Serviced IP.</inlineHelpText>
        <label>New IP Hazard Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOfBoxes__c</fullName>
        <label>No Of Boxes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Returned_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Not Returned Qty</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Returned_Reason__c</fullName>
        <description>&quot;Parts not shipped&quot; value added in picklist by Nitin Khunal</description>
        <label>Not Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left on site</fullName>
                </value>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>Left at depot</fullName>
                </value>
                <value>
                    <fullName>Parts not shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenHazard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOFS-2888, march&apos;19</description>
        <inlineHelpText>This checkbox will be true if IP attached to the work detail is hazardous.</inlineHelpText>
        <label>Open Hazard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PQA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PQA#</label>
        <referenceTo>Product_Quality_Alert__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartNumber__c</fullName>
        <formula>IF(NOT(ISBLANK(Parts__c)), Parts__c, 

IF(NOT(ISBLANK(PartsOrderLine__r.BOMaterialReference__c)), 
PartsOrderLine__r.BOMaterialReference__c, 

IF(NOT(ISBLANK(Parts_Order_Line_RMA__r.BOMaterialReference__c)), 
Parts_Order_Line_RMA__r.BOMaterialReference__c, 

IF(NOT(ISBLANK(PartsOrderLine__r.SKU__c)), 
PartsOrderLine__r.SKU__c, 

IF(NOT(ISBLANK(PartsOrderLine__r.SVMXC__Product__c)), 
PartsOrderLine__r.SVMXC__Product__r.Name, 

IF(NOT(ISBLANK(Parts_Order_Line_RMA__r.SKU__c)), 
Parts_Order_Line_RMA__r.SKU__c, 

IF(NOT(ISBLANK(Parts_Order_Line_RMA__r.SVMXC__Product__c)), 
Parts_Order_Line_RMA__r.SVMXC__Product__r.Name, 

IF(NOT(ISBLANK(PartsOrderLine__r.Generic_reference__c)), 
PartsOrderLine__r.Generic_reference__c, 

IF(NOT(ISBLANK(Parts_Order_Line_RMA__r.Generic_reference__c)), 
Parts_Order_Line_RMA__r.Generic_reference__c, 

IF(NOT(ISBLANK(PartsOrderLine__r.Free_text_reference__c)), 
PartsOrderLine__r.Free_text_reference__c, 

IF(NOT(ISBLANK(Parts_Order_Line_RMA__r.Free_text_reference__c)), 
Parts_Order_Line_RMA__r.Free_text_reference__c, &apos;&apos;)))))))))))</formula>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartOrderLineBOReference__c</fullName>
        <formula>PartsOrderLine__r.BackOfficeReference__c</formula>
        <label>PartOrderLineBOReference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartOrderLinebFONumber__c</fullName>
        <formula>PartsOrderLine__r.Name</formula>
        <label>PartOrderLinebFONumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Order_Line_Type__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( PartsOrderLine__c )), NOT(ISBLANK(  Parts_Order_Line_RMA__c ))), &apos;Shipment/RMA&apos;,
IF(NOT(ISBLANK( PartsOrderLine__c )), &apos;Shipment&apos;, 
IF(NOT(ISBLANK(Parts_Order_Line_RMA__c )), &apos;RMA&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Order Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <formula>PartsOrderLine__r.SVMXC__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsOrderLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parts Order Line (Shipment)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria -- only Part Order Line Shipment (Reference spare part or Non Reference spare part) are authorized</errorMessage>
            <filterItems>
                <field>SVMXC__RMA_Shipment_Line__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Reference spare part, Non reference spare part</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Work Details</relationshipLabel>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsOrderStatus__c</fullName>
        <formula>TEXT(PartsOrderLine__r.ShippingStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Order_Line_RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parts Order Line (RMA)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria -- only Parts Order Line RMA are authorized.</errorMessage>
            <filterItems>
                <field>SVMXC__RMA_Shipment_Line__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>RMA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Work Details (Parts Order Line (RMA))</relationshipLabel>
        <relationshipName>Work_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Order_Line_Status__c</fullName>
        <formula>IF(Text(Parts_Order_Line_RMA__r.ShippingStatus__c)!=null,Text(Parts_Order_Line_RMA__r.ShippingStatus__c), TEXT(PartsOrderLine__r.ShippingStatus__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts Order Line Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <label>Parts</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_FSR__c</fullName>
        <formula>SVMXC__Service_Order__r.SVMXC__Group_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary FSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCalculated__c</fullName>
        <description>This field shows the Product of the Installed Product or the product of  work detail (Service Product), if Installed Product not populated</description>
        <formula>NULLVALUE( SVMXC__Serial_Number__r.SVMXC__Product__c ,  SVMXC__Product__c )</formula>
        <inlineHelpText>This field shows the Product of the Installed Product or the product of  work detail (Service Product), if Installed Product not populated</inlineHelpText>
        <label>Product (Calculated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>IF ( NOT(ISBLANK( PartsOrderLine__c )), PartsOrderLine__r.Description__c , 
IF ( NOT(ISBLANK( Parts_Order_Line_RMA__c )), Parts_Order_Line_RMA__r.Description__c,
SVMXPartDescription__c))</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_New__c</fullName>
        <description>will be populated with the Product of the Main Installed Product of the Work Order if it exists or with the Shipped Product of the Service Product Work Detail thanks to Process Builder.</description>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>